Add java options to resolve crash